// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies styles to clear button when showClear=true 1`] = `
<Header
  leftElement={
    <ActionButton
      label="Cancel"
      onPress={[Function]}
      style={Object {}}
    />
  }
  rightElement={
    <ActionButton
      label="Clear all"
      onPress={[Function]}
      style={Object {}}
    />
  }
  title="Filter Events"
/>
`;

exports[`renders correctly 1`] = `
<Header
  leftElement={
    <ActionButton
      label="Cancel"
      onPress={[Function]}
      style={Object {}}
    />
  }
  rightElement={null}
  title="Filter Events"
/>
`;
